--- a/style.css
+++ b/style.css
@@ -1,176 +1,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
-/* Medidas CSS
-  pixels: 1px
-  viewport: vw / vh (relativos)
-  fonte geral: rem (relativo) - elemento html
-  fonte do escopo: em (relativo) - elemento pai
-  %: relativa - elemento pai
-*/
-
-html {
-  font-size: 80%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+nav{
+    background-color: #A0EEC8;
+    padding: 10px 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+nav{
+    background-color:white;
+    padding: 10px 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-/* Seletor CSS */
-body {
-  font-family: 'Ropa Sans', sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #888888;
-  width: 100%;
+nav ul{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding: 10px;
 }
-
-body * {
-  box-sizing: border-box;
+nav li{
+    margin-left: 7px;
 }
-
-body > header {
-  padding: 1rem 2rem;
-  font-size: 1rem;
-  line-height: 1rem;
-  box-shadow: .1rem .1rem 1rem gray;
+nav li a{
+    text-decoration: none;
+    color:black;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 15px;
+    border-radius: 5px;
+    transition: 0.3s;
 }
-
-header > * {
-  display: inline-block;
-  margin: 0;
-}
-
-body > header > img {
-  float: right;
-  margin-top: 16px;
-}
-
-body > main {
-  width: 100%;
-}
-
-#banner {
-  padding: 1rem;
-  width: 100%;
-}
-
-#banner > img {
-  width: 100%;
-}
-
-#sales {
-  padding: 0 1rem;
-  width: 100%;
-}
-
-#sales > article {
-  width: 100%;
-  margin-bottom: 1rem;
-}
-
-#sales > article img {
-  width: 100%;
-  margin-bottom: -.5rem
-}
-
-#sales > article > footer {
-  padding: 12px;
-  background-color: #EEEEEE;
-}
-
-#sales span {
-  font-size: 25px;
-  line-height: 27px;
-}
-
-.right {
-  border-radius: 1.5rem;
-  background-color: #51D275;
-  color: white;
-  padding: 0 1rem;
-  float: right;
-}
-
-.right.sale {
-  background-color: #DC9730;
-}
-
-#your-style {
-  padding: 0 1rem;
-}
-
-#your-style * {
-  width: 100%;
-  text-align: center;
-}
-
-.opaque {
-  opacity: 0.5; /* 0 - 1*/
-}
-
-.styles {
-  min-height: 5rem;
-  padding-top: 2rem;
-  color: white;
-  margin-bottom: 1rem;
-}
-
-.styles span {
-  font-size: 1.5rem;
-  text-shadow: black .1rem .1rem;
+nav li a:hover{
+    background-color: antiquewhite;
+    color: black;
 }
 
 
-footer {
-  width: 100%;
-  padding: 1rem 1rem;
-  background-color: #333333;
+.banner{
+    height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.281),rgba(0,0,0,0.308)),url('Rec3.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-footer > #gmaps {
-  width: 100%;
+.livro1 > img {
+    width: 18%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+   background-position: center;
+   left: 50%;
+  
 }
-
-#contacts {
-  color: white;
-  text-align: center;
-  vertical-align: center;
+.livro1 > p{
+    width: 50%;
+    font-size: 19px;
+    align-items: center;
+    justify-content: center;
+    
 }
+.texto .titulo{
+    color: #A0EEC8;
+    font-size: 58px;
+    font-weight: 600;
 
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media (min-width: 600px) {
-  #sales > article {
-    width: 40%;
-    display: inline-block;
-  }
-
-  #sales > article:last-child {
-    float: right;
-  }
-
-  footer > #gmaps {
-    width: 40%;
-    display: inline-block;
-  }
-
-  footer > #contacts {
-    width: 40%;
-    text-align: start;
-    display: inline-block;
-    margin-left: 18%;
-  }
 }
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media (min-width: 768px) {
-  body {
-    max-width: 768px;
-    margin: 0 auto;
-  }
+.texto .botoes button{
+    height: 55px;
+    width: 170px;
+    border-radius: 5px;
+    border: 0;
+    margin: 0 10px;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 0 10px;
+    cursor: pointer;
+    outline: none;
+    color:white;
+    background-color: #69E0AE;
 }
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media (min-width: 992px) {
-  body {
-    max-width: 992px;
-  }
-}
-
-
