incluindo os livros

--- a/style.css
+++ b/style.css
@@ -6,15 +6,15 @@
     box-sizing: border-box;
 }
 nav{
-    background-color: #A0EEC8;
+    background-color: #e5a0ee;
     padding: 10px 60px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 nav{
-    background-color:white;
-    padding: 10px 60px;
+    background-color:#FFFFFF;
+    padding: 4px 4px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -37,16 +37,18 @@ nav li a{
     padding: 8px 15px;
     border-radius: 5px;
     transition: 0.3s;
+    
 }
 nav li a:hover{
-    background-color: antiquewhite;
+    background-color: #A0EEC8;
+    
     color: black;
 }
 
 
 .banner{
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.281),rgba(0,0,0,0.308)),url('Rec3.png');
+    background: #DFDFDF;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -54,22 +56,98 @@ nav li a:hover{
     align-items: center;
     justify-content: center;
 }
-.livro1 > img {
-    width: 18%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+.header >img{
+    background-color:#A0EEC8;
+    padding: 4px 4px;
     display: flex;
-   background-position: center;
-   left: 50%;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+        font-size: 18px;
+        font-weight: 200;
+        padding: 8px 15px;
+        border-radius: 5px;
+        transition: 0.3s;
+        Width:991px;
+height:90px;
+padding:8px 15px;
+
+}
+
+
+.container > img {
+position: absolute;
+width: 300px;
+height: 400px;
+padding: 8px 15px;
+top: 200px;
+right: 900px;
+ font-size: 18px;
+ font-weight: 200;
+padding: 8px 15px;
+ border-radius: 5px;
   
 }
-.livro1 > p{
-    width: 50%;
-    font-size: 19px;
-    align-items: center;
-    justify-content: center;
-    
+
+.título{
+position: absolute;
+width: 783.09px;
+height: 90.4px;
+right: 108px;
+top:170px;
+font-family: 'Asul';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 36px;
+display: flex;
+align-items: center;
+text-transform: uppercase;
+color: #000000;
+transform: matrix(1, 0, 0, 1, 0, 0);
+}
+.sinopse{
+position: absolute;
+width: 400px;
+height: 300px;
+top: 270px;
+right: 500px;
+font-family: 'Asul';
+font-style: normal;
+font-weight: 200;
+font-size: 20px;
+line-height: 27px;
+display: flex;
+align-items: center;
+
+}
+.visualisador1 >img{
+    position: absolute;
+    width: 180px;
+    height: 200px;
+    padding: 8px 15px;
+    top: 200px;
+    left: 560px;;
+    right: 900px;
+     font-size: 18px;
+     font-weight: 200;
+    padding: 8px 15px;
+     border-radius: 5px;
+         
+
+}
+.visualisador2 >img{
+    position: absolute;
+    width: 200px;
+    height: 180px;
+    padding: 8px 15px;
+    top: 400px;
+    left: 560px;;
+    right: 900px;
+     font-size: 18px;
+     font-weight: 200;
+    padding: 8px 15px;
+     border-radius: 5px;
 }
 .texto .titulo{
     color: #A0EEC8;
@@ -88,6 +166,24 @@ nav li a:hover{
     padding: 0 10px;
     cursor: pointer;
     outline: none;
-    color:white;
+    color:black;
     background-color: #69E0AE;
 }
+.mobile-menu{
+    display: none;
+}
+@media (min-width: 768px) {
+    body {
+      max-width: 768px;
+      margin: 0 auto;
+    }
+  }
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media (min-width: 992px) {
+    body {
+      max-width: 992px;
+    }
+  }
+  
+ 
